--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,22 @@
 {% include "header.html"%}
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Profile</title>
-  </head>
-  <body >
-    {% block content %}
 
-    <h1 style="padding-top: 200px;color: black;font-size: 70px;"><center>Welcome To The <font style="color: #ffd11a">FedChoice</font>  Bank</center></h1>
+<head>
+  <title>Profile</title>
+</head>
 
- {% endblock %}
-  </body>
+<body>
+  {% block content %}
+
+  <h1 style="padding-top: 200px;color: black;font-size: 70px;">
+    <center>Welcome To The <font style="color: #ffd11a">Vishwa</font> Bank</center>
+  </h1>
+
+  {% endblock %}
+</body>
 
 
- 
-</html>  <p style="padding-top: 100px;color: black">
+
+</html>
+<p style="padding-top: 100px;color: black">
